fix(comp:transfer): pagination should enable quick jumper, meanwhile fix header suffix style (#1459)
* style(comp:transfer): transfer header suffix isn't vertially centered

* fix(comp:transfer): pagination quick jumper should be enabled

* docs(comp:transfer): modify header suffix size of demo

--- a/packages/components/transfer/style/content.less
+++ b/packages/components/transfer/style/content.less
@@ -74,6 +74,7 @@
   }
 
   &-suffix {
+    line-height: 1;
     margin-left: auto;
   }
   &-clear-icon + &-suffix,
